src/tests/snapshots/parse__parse error.snap
---
created: "2019-04-04T17:26:41.994499400Z"
creator: insta@0.7.1
source: src/tests/parse.rs
expression: err
---
Parse error: Expected Semi, got Some(BinOp(Sub))
 --> <anon>:1:7
  |
1 | var ab-cd = 1;
  |       ^


